# 3D-Printer-Firmware

./: .clangd  .gitignore  3D-Printer-Firmware.ino  3DP_Firmware.ino  CMakeLists.txt  Printer.cpp  README.md  build-and-monitor.bat  build.bat  build.sh  platform.ini  platformio.ini  serial.bat  upload.bat  vcpkg.json
Configurations/: geometry.h  pins.h
Endstops/: EndStopEvent.cpp  EndStopEvent.h
Motors/: motors.cpp  motors.h
Movements/: coordinates.cpp
Serial/: SerialListener.cpp  SerialListener.h
Utils/: Vertex.cpp  Vertex.h
src/: Application.cpp  BusyHandler.cpp  CommandDispatcher.cpp  CommandHistory.cpp  CompactResponse.cpp  README.txt  SafetyManager.cpp  SerialCommandReceiver.cpp  StateMachine.cpp  WatchdogHandler.cpp  main.cpp
src/controllers/: EndstopController.cpp  ExtruderController.cpp  FanController.cpp  HistoryController.cpp  MotionController.cpp  SystemController.cpp  TempController.cpp
src/hal/: McuHAL.cpp
src/hal/arduino/: ArduinoHAL.cpp
src/hal/drivers/stepper/: A4988Stepper.cpp
src/hal/esp32/: ESP32HAL.cpp
src/include/: Application.hpp  BusyHandler.hpp  CommandDispatcher.hpp  CommandHistory.hpp  CompactResponse.hpp  Config.hpp  Pins.hpp  PlatformConfig.hpp  SafetyManager.hpp  SerialCommandReceiver.hpp  StateMachine.hpp  TimeUtils.hpp  Types.hpp  WatchdogHandler.hpp
src/include/controllers/: EndstopController.hpp  ExtruderController.hpp  FanController.hpp  HistoryController.hpp  MotionController.hpp  SystemController.hpp  TempController.hpp
src/include/endstop/: EndstopConfig.hpp
src/include/extruder/: ExtruderConfig.hpp
src/include/hal/: McuHAL.hpp
src/include/hal/arduino/: ArduinoHAL.hpp
src/include/hal/drivers/: StepperConfig.hpp  StepperDriver.hpp
src/include/hal/drivers/stepper/: A4988Stepper.hpp
src/include/hal/esp32/: ESP32HAL.hpp
src/include/motion/: HomingConfig.hpp  MotionConfig.hpp  MotionPlanner.hpp  Position.hpp
src/io/: CommandFactory.cpp  CommandFactory.h  Throwable.h
src/io/command/: Command.cpp  Command.h  CommandExecute.h
src/io/commands/: Command.h  CommandArgument.cpp  CommandArgument.h
src/io/commands/listener/: CommandListener.cpp  CommandListener.h
src/io/commands/types/: LedCommand.cpp  LedCommand.h
src/io/executors/: CommandExecute.h  CommandExecutor.h
src/motion/: MotionPlanner.cpp
src/sensors/: Sensor.h  SensorEnum.h  SensorMap.h  SensorPinOut.h  SensorsConfiguration.h
src/sensors/led/: Led.cpp  Led.h  LedSensor.cpp  LedSensor.h
src/sensors/motors/: Motor.cpp  Motor.h
src/sensors/temp/: Temperature.cpp  Temperature.h
src/serial/: SerialListener.h
src/serial/handler/: SerialCommandHandler.h  SerialHandler.cpp
src/utils/: std.h
src/utils/list/vector/: Vector.cpp  VectorElement.cpp
utils/: calc_checksum.py  putty_serial_monitor.bat  send_serial_command.bat
